--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "mongoose": "^8.7.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
 }
